# rubberduck

./: .dockerignore  .gitignore  Dockerfile  README.md  conftest.py  deploy.yml  deployment.yaml  index.html  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  telemetry.jsonl
.github/workflows/: deploy.yml  test-models-pr.yml  test-models.yml
app/: __init__.py  abort.py  config.py  context.py  history.py  messages.py  query_engine.py  telemetry.py  tools.py
app/routes/: __init__.py  chat.py  models.py  sessions.py
assets/css/: index.css
assets/js/: app.js
ci/: Dockerfile  deployment.yaml
cli/: README.md  duck.py  pyproject.toml
rubberduck.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_abort.py  test_cli.py  test_context.py  test_history.py  test_messages.py  test_ollama_models.py  test_query_engine.py  test_routes_chat.py  test_routes_models.py  test_routes_sessions.py  test_telemetry.py
wiki/: API-Reference.md  Architecture.md  Configuration.md  Deployment.md  Getting-Started.md  Home.md  Memory.md  Telemetry.md
