[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rubberduck-cli"
version = "0.1.0"
description = "Barebones terminal chat client for Ollama — CLI version of rubberduck.ai"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28,<1.0",
]

[project.scripts]
duck = "duck:main"

[tool.setuptools.packages.find]
where = ["."]
[tool.setuptools.py-modules]
duck = "duck"
